# prisma-access-export-security-rule

./: .gitignore  LICENSE  Readme.md  export.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
